--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../dist/functions",
-    "rootDir": "."
+    "rootDir": ".",
+    "resolveJsonModule": true
   }
 }
