--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "functions/index.js",
   "scripts": {
     "build": "ts-node bin/build.ts",
-    "watch": "./bin/watch.sh",
+    "watch": "ts-node bin/watch.ts",
     "dev": "firebase serve",
     "lint": "eslint --ext=ts,tsx ."
   },
