--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "main": "functions/index.js",
   "scripts": {
     "build": "ts-node bin/build.ts",
-    "watch": "ts-node bin/watch.ts",
     "dev": "firebase serve",
-    "lint": "eslint --ext=ts,tsx ."
+    "lint": "eslint --ext=ts,tsx .",
+    "test": "jest",
+    "watch": "ts-node bin/watch.ts"
   },
   "alias": {
     "ui": "./ui",
@@ -20,12 +21,15 @@
     "last 1 Chrome version"
   ],
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
+    "@loadable/babel-plugin": "^5.10.0",
+    "@loadable/component": "^5.10.1",
     "@reach/router": "^1.2.1",
-    "@types/node-fetch": "^2.3.5",
+    "@types/react-loadable": "^5.5.1",
     "apollo-boost": "^0.4.1",
     "apollo-server-cloud-functions": "^2.6.1",
     "chokidar": "^3.0.0",
-    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
@@ -35,25 +39,24 @@
     "graphql": "^14.3.1",
     "grpc": "^1.21.1",
     "isomorphic-unfetch": "^3.0.0",
-    "morgan": "^1.9.1",
-    "node-typescript-compiler": "^2.0.0",
-    "ora": "^3.4.0",
-    "parcel-plugin-assets-list": "^1.7.1",
+    "parcel-plugin-bundle-manifest": "^0.2.0",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.5",
+    "react-async-ssr": "^0.5.0",
     "react-dom": "^16.8.6",
+    "react-imported-component": "^5.5.3",
+    "react-loadable": "^5.5.0",
+    "react-ssr-prepass": "^1.0.5",
     "reflect-metadata": "^0.1.13",
     "require-from-string": "^2.0.2",
-    "type-graphql": "^0.17.4",
-    "ui": "^0.2.4",
-    "workbox": "0.0.0"
+    "tslib": "^1.9.3",
+    "type-graphql": "^0.17.4"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.1",
     "@types/fs-extra": "^7.0.0",
     "@types/graphql": "^14.2.0",
-    "@types/morgan": "^1.7.35",
-    "@types/ora": "^3.2.0",
+    "@types/jest": "^24.0.13",
+    "@types/node-fetch": "^2.3.5",
     "@types/parcel-bundler": "^1.12.0",
     "@types/reach__router": "^1.2.4",
     "@types/react": "^16.8.19",
@@ -62,7 +65,10 @@
     "@types/workbox-sw": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
-    "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
@@ -73,12 +79,27 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
+    "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.1",
+    "ts-jest": "^24.0.2",
     "ts-node": "^8.2.0",
     "typescript": "^3.5.1",
-    "workbox-build": "^4.3.1",
     "workbox-sw": "^4.3.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "transform": {
+      "^.+\\.(t|j)sx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/).*(test|spec)\\.ts",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
