--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "last 1 Chrome version"
   ],
   "dependencies": {
+    "@loadable/babel-plugin": "^5.10.0",
+    "@loadable/component": "^5.10.1",
+    "@loadable/server": "^5.9.0",
     "@reach/router": "^1.2.1",
+    "@types/loadable__server": "^5.9.1",
     "@types/node-fetch": "^2.3.5",
     "apollo-boost": "^0.4.1",
     "apollo-server-cloud-functions": "^2.6.1",
+    "babel-polyfill": "^6.26.0",
     "chokidar": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
@@ -36,23 +41,32 @@
     "grpc": "^1.21.1",
     "isomorphic-unfetch": "^3.0.0",
     "morgan": "^1.9.1",
+    "multistream": "^2.1.1",
     "node-typescript-compiler": "^2.0.0",
     "ora": "^3.4.0",
     "parcel-plugin-assets-list": "^1.7.1",
+    "query-string": "^6.7.0",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
+    "react-imported-component": "^5.5.3",
     "reflect-metadata": "^0.1.13",
     "require-from-string": "^2.0.2",
     "type-graphql": "^0.17.4",
     "ui": "^0.2.4",
+    "used-styles": "^1.1.0",
     "workbox": "0.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/polyfill": "^7.4.4",
     "@types/cookie-parser": "^1.4.1",
     "@types/fs-extra": "^7.0.0",
     "@types/graphql": "^14.2.0",
+    "@types/loadable__component": "^5.9.0",
     "@types/morgan": "^1.7.35",
+    "@types/multistream": "^2.1.1",
     "@types/ora": "^3.2.0",
     "@types/parcel-bundler": "^1.12.0",
     "@types/reach__router": "^1.2.4",
