feat: useProps hook

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Firebase React",
-  "name": "Firebase React",
+  "short_name": "IP Addr",
+  "name": "IP Addr Network",
   "display": "standalone",
   "icons": [
     {
