--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
+    "react/prop-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-var-requires": "warn",
     "@typescript-eslint/no-unused-vars": [
