feat: Code splitting and inital props

--- a/tsconfig-server.json
+++ b/tsconfig-server.json
@@ -1,6 +1,7 @@
 {
-  "extends": "../tsconfig-server.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "../dist/functions",
     "rootDir": "."
   }
