--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "functions/index.js",
   "scripts": {
-    "build": "ts-node bin/build.ts",
-    "watch": "ts-node bin/watch.ts",
+    "build": "ts-node --project tsconfig-server.json bin/build.ts",
+    "watch": "ts-node --project tsconfig-server.json bin/watch.ts",
     "dev": "firebase serve",
     "lint": "eslint --ext=ts,tsx ."
   },
@@ -21,11 +21,13 @@
   ],
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "@rmwc/button": "^5.5.2",
     "@rmwc/drawer": "^5.5.2",
     "@rmwc/list": "^5.5.2",
     "@types/node-fetch": "^2.3.5",
     "apollo-boost": "^0.4.1",
     "apollo-server-cloud-functions": "^2.6.1",
+    "autoprefixer": "^9.6.0",
     "chokidar": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
@@ -41,10 +43,12 @@
     "node-typescript-compiler": "^2.0.0",
     "ora": "^3.4.0",
     "parcel-plugin-assets-list": "^1.7.1",
+    "parcel-plugin-bundle-manifest": "^0.2.0",
     "public-ip": "^3.1.0",
     "react": "^16.8.6",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
     "reflect-metadata": "^0.1.13",
     "require-from-string": "^2.0.2",
     "type-graphql": "^0.17.4",
@@ -62,11 +66,13 @@
     "@types/reach__router": "^1.2.4",
     "@types/react": "^16.8.19",
     "@types/react-dom": "^16.8.4",
+    "@types/react-loadable": "^5.5.1",
     "@types/require-from-string": "^1.2.0",
     "@types/workbox-sw": "^4.2.0",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-core": "^6.26.3",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
