--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,15 @@
   ],
   "start_url": "/",
   "background_color": "#eee",
-  "theme_color": "#6200ee"
+  "theme_color": "#6200ee",
+  "share_target": {
+    "action": "share",
+    "method": "GET",
+    "enctype": "application/x-www-form-urlencoded",
+    "params": {
+      "title": "name",
+      "text": "description",
+      "url": "link"
+    }
+  }
 }
