--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "esnext",
     "lib": ["dom", "es2017", "esnext.asynciterable"],
     "allowJs": false,
     "jsx": "react",
@@ -11,7 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "functions": ["./functions"],
-      "ui": ["./ui"]
+      "ui": ["./ui"],
+      "~*": ["./ui/*"]
     },
     "typeRoots": ["./types"],
     "esModuleInterop": true,
