--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "@rmwc/button": "^5.5.2",
+    "@rmwc/chip": "^5.5.2",
     "@rmwc/circular-progress": "^5.5.2",
     "@rmwc/dialog": "^5.5.2",
     "@rmwc/drawer": "^5.5.2",
@@ -29,9 +30,11 @@
     "@types/node-fetch": "^2.3.5",
     "apollo-boost": "^0.4.1",
     "apollo-server-cloud-functions": "^2.6.1",
+    "async-until": "^2.0.0",
     "autoprefixer": "^9.6.0",
     "chokidar": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "debounce-async": "0.0.2",
     "express": "^4.17.1",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^2.3.1",
@@ -44,6 +47,7 @@
     "morgan": "^1.9.1",
     "node-typescript-compiler": "^2.0.0",
     "ora": "^3.4.0",
+    "p-debounce": "^2.1.0",
     "parcel-plugin-assets-list": "^1.7.1",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "public-ip": "^3.1.0",
