--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "IP Addr",
   "name": "IP Addr Network",
+  "categories": ["utilities"],
   "display": "standalone",
   "icons": [
     {
@@ -17,6 +18,12 @@
   "start_url": "/",
   "background_color": "#eee",
   "theme_color": "#6200ee",
+  "serviceworker": {
+    "src": "./service-worker.js",
+    "scope": "/",
+    "type": "",
+    "update_via_cache": "none"
+  },
   "share_target": {
     "action": "share",
     "method": "GET",
