feat: Dark mode. Harpreet wanted dark mode!

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@rmwc/dialog": "^5.5.2",
     "@rmwc/drawer": "^5.5.2",
     "@rmwc/list": "^5.5.2",
+    "@rmwc/switch": "^5.5.2",
+    "@rmwc/theme": "^5.5.2",
+    "@rmwc/typography": "^5.5.2",
     "@types/node-fetch": "^2.3.5",
     "apollo-boost": "^0.4.1",
     "apollo-server-cloud-functions": "^2.6.1",
