feat: more routes, adaptive dark mode, App reorganization, bunch of awesome stuff

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "firebase-ssr",
   "version": "1.0.0",
   "private": true,
+  "sideEffects": false,
   "engines": {
     "node": "10"
   },
@@ -20,15 +21,23 @@
     "last 1 Chrome version"
   ],
   "dependencies": {
+    "@mdi/js": "^3.6.95",
+    "@mdi/react": "^1.1.1",
+    "@mdi/svg": "^3.6.95",
     "@reach/router": "^1.2.1",
     "@rmwc/button": "^5.5.2",
+    "@rmwc/card": "^5.5.2",
     "@rmwc/chip": "^5.5.2",
     "@rmwc/circular-progress": "^5.5.2",
+    "@rmwc/data-table": "^5.5.2",
     "@rmwc/dialog": "^5.5.2",
     "@rmwc/drawer": "^5.5.2",
+    "@rmwc/icon": "^5.5.2",
     "@rmwc/list": "^5.5.2",
+    "@rmwc/select": "^5.5.2",
     "@rmwc/switch": "^5.5.2",
     "@rmwc/theme": "^5.5.2",
+    "@rmwc/top-app-bar": "^5.5.2",
     "@rmwc/typography": "^5.5.2",
     "@types/node-fetch": "^2.3.5",
     "apollo-boost": "^0.4.1",
@@ -58,6 +67,7 @@
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
+    "react-slidedown": "^2.4.3",
     "reflect-metadata": "^0.1.13",
     "require-from-string": "^2.0.2",
     "type-graphql": "^0.17.4",
