--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "last 1 Chrome version"
   ],
   "dependencies": {
-    "@mdi/js": "^3.6.95",
+    "@hg8496/netmask": "^2.0.3",
+    "@mdi/js": "^3.7.95",
     "@mdi/react": "^1.1.1",
-    "@mdi/svg": "^3.6.95",
     "@reach/router": "^1.2.1",
     "@rmwc/button": "^5.5.2",
     "@rmwc/card": "^5.5.2",
@@ -36,30 +36,24 @@
     "@rmwc/list": "^5.5.2",
     "@rmwc/select": "^5.5.2",
     "@rmwc/switch": "^5.5.2",
+    "@rmwc/tabs": "^5.5.2",
     "@rmwc/theme": "^5.5.2",
     "@rmwc/top-app-bar": "^5.5.2",
     "@rmwc/typography": "^5.5.2",
-    "@types/node-fetch": "^2.3.5",
-    "apollo-boost": "^0.4.1",
-    "apollo-server-cloud-functions": "^2.6.1",
+    "@types/node-fetch": "^2.3.7",
+    "apollo-boost": "^0.4.3",
+    "apollo-server-cloud-functions": "^2.6.4",
     "async-until": "^2.0.0",
-    "autoprefixer": "^9.6.0",
-    "chokidar": "^3.0.0",
-    "cookie-parser": "^1.4.4",
-    "debounce-async": "0.0.2",
+    "chokidar": "^3.0.1",
     "express": "^4.17.1",
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^2.3.1",
+    "firebase-admin": "^8.2.0",
+    "firebase-functions": "^3.0.1",
     "firebase-functions-test": "^0.1.6",
-    "firebase-tools": "^6.10.0",
+    "firebase-tools": "^7.0.1",
     "fs-extra": "^8.0.1",
     "graphql": "^14.3.1",
     "grpc": "^1.21.1",
     "isomorphic-unfetch": "^3.0.0",
-    "morgan": "^1.9.1",
-    "node-typescript-compiler": "^2.0.0",
-    "ora": "^3.4.0",
-    "p-debounce": "^2.1.0",
     "parcel-plugin-assets-list": "^1.7.1",
     "parcel-plugin-bundle-manifest": "^0.2.0",
     "public-ip": "^3.1.0",
@@ -69,29 +63,23 @@
     "react-loadable": "^5.5.0",
     "react-slidedown": "^2.4.3",
     "reflect-metadata": "^0.1.13",
-    "require-from-string": "^2.0.2",
     "type-graphql": "^0.17.4",
     "typestyle": "^2.0.2",
     "ui": "^0.2.4",
-    "workbox": "0.0.0"
+    "use-debounce": "^2.1.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.1",
+    "@babel/core": "^7.4.5",
     "@types/fs-extra": "^7.0.0",
-    "@types/graphql": "^14.2.0",
-    "@types/morgan": "^1.7.35",
-    "@types/ora": "^3.2.0",
+    "@types/graphql": "^14.2.1",
     "@types/parcel-bundler": "^1.12.0",
     "@types/reach__router": "^1.2.4",
-    "@types/react": "^16.8.19",
+    "@types/react": "^16.8.22",
     "@types/react-dom": "^16.8.4",
     "@types/react-loadable": "^5.5.1",
-    "@types/require-from-string": "^1.2.0",
     "@types/workbox-sw": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-core": "^6.26.3",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^12.0.0",
@@ -102,12 +90,9 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^3.0.1",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.17.1",
-    "ts-node": "^8.2.0",
-    "typescript": "^3.5.1",
-    "workbox-build": "^4.3.1",
-    "workbox-sw": "^4.3.1"
+    "prettier": "^1.18.2",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   }
 }
